k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ad-analytics
  labels:
    app.kubernetes.io/part-of: ad-analytics
