k8s/click-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: click-api
  namespace: ad-analytics
  labels:
    app: click-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: click-api
  template:
    metadata:
      labels:
        app: click-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path:   "/metrics"
        prometheus.io/port:   "3001"
    spec:
      containers:
        - name: click-api
          image: ad-analytics/click-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /ready
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: click-api
  namespace: ad-analytics
  labels:
    app: click-api
spec:
  selector:
    app: click-api
  ports:
    - port: 3001
      targetPort: 3001
